<resources>
    <string name="app_name">Piggy</string>
    <string name="amount_template">$%1s</string>
    <string name="pos_amount_template">+$%1s</string>
    <string name="neg_amount_template">-$%1s</string>
    <string name="add">add</string>
    <string name="new_income">New Income</string>
    <string name="new_expense">New Expense</string>
    <string name="amount_placeholder">$0</string>
    <string name="your_balance">Your Balance</string>
    <string name="currency_mxn">MXN</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="earnings">Earnings</string>
    <string name="expenses">Expenses</string>
    <string name="transactions">Transactions</string>
    <string name="category">Categoría</string>
    <string name="date">01 Month, 01:01 AM</string>
</resources>