<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="5dp"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/amount_placeholder"
        android:textSize="14sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/transaction_title"
        app:layout_constraintBottom_toBottomOf="@id/transaction_title"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icon_container"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/balance_card_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/transaction_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/type"
            android:padding="6dp"
            android:src="@drawable/ic_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/transaction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/icon_container"
        app:layout_constraintStart_toEndOf="@id/icon_container"
        />

    <TextView
        android:id="@+id/transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="#C4C4C4"
        app:layout_constraintBottom_toBottomOf="@id/icon_container"
        app:layout_constraintStart_toStartOf="@id/transaction_title"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
